Fixing layout problem with event

--- a/themes/nwdrupal/styles/modules/_blocks.scss
+++ b/themes/nwdrupal/styles/modules/_blocks.scss
@@ -1,15 +1,15 @@
 #block-footer-legal {
   font-size: $small-size;
   line-height: 1.6;
-  
+
   ul {
     margin-bottom: 1em;
   }
-  
+
   p {
     margin: 0;
   }
-  
+
   a {
     color: $colour-font;
     @include text-decoration();
@@ -29,12 +29,12 @@
 }
 
 #block-welcometext {
-  h1 { 
+  h1 {
     font-size: $mega-size;
     font-weight: $bold;
     margin: 0 0 0.25em 0;
   }
-  
+
   p {
     font-size: $h2-size;
     margin: 0 0 1.5em 0;
@@ -46,6 +46,7 @@ body.path-frontpage div.view-events {
   article {
     border: 1px #eee solid;
     background: white;
+    overflow: hidden;
     padding-bottom: 23px;
     padding-top: 21px;
     margin-bottom: 20px;
@@ -53,8 +54,39 @@ body.path-frontpage div.view-events {
     width: 48%;
 
     &.first-event {
+      padding-top: 3.5em;
       width: 100%;
       float: none;
+
+      @include bp("mama-bear") {
+        padding-top: 21px;
+        padding-right: 2em;
+      }
+
+      &:after {
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        display: block;
+        width: 9em;
+        padding: 0.2em 0.5em;
+
+        background-color: forestgreen;
+        color: white;
+
+        font-weight: bold;
+        font-size: 1em;
+        text-align: center;
+        text-transform: uppercase;
+
+        content: "Next Event";
+
+        @include bp("mama-bear") {
+          transform: translateX(30%) rotate(45deg) translateY(-100%);
+          transform-origin: top left;
+        }
+      }
     }
 
     &.last-event {
@@ -78,7 +110,6 @@ div.view-events {
 
 div.event-data {
   div {
-    width: 61%;
     padding: 0.1rem;
     margin-left: 0.5rem;
     margin-top: 1rem;
